--- a/TP3/baseline_logistic_regression.ipynb
+++ b/TP3/baseline_logistic_regression.ipynb
@@ -2961,6 +2961,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "[Link predicciones](https://drive.google.com/file/d/1-PvPEPqhv7iP5KsnrdgS-Gg-f6rcP7bR/view?usp=sharing)"
+      ],
+      "metadata": {
+        "id": "WTn0cXz9-L04"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Features más importantes"
       ],
       "metadata": {
