--- a/TP3/xg_boost.ipynb
+++ b/TP3/xg_boost.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "XGBoost.ipynb",
+      "name": "xg_boost.ipynb",
       "provenance": [],
       "collapsed_sections": [
         "LWUrBDzx-_MK",
@@ -3110,6 +3110,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[Link predicciones](https://drive.google.com/file/d/1vIkpZld8Qxy7bMZc8zL0owpY_IPEKhr6/view?usp=sharing)"
+      ],
+      "metadata": {
+        "id": "4Bw1gHT4-bv9"
+      }
     },
     {
       "cell_type": "markdown",
