--- a/TP3/analisis_exploratorio.ipynb
+++ b/TP3/analisis_exploratorio.ipynb
@@ -26,6 +26,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "El dataset a usar es el extraído de los experimentos realizados en [este paper](https://repositorium.sdum.uminho.pt/bitstream/1822/39169/1/main.pdf) sobre la predicción de popularidad de artículos en el sitio [Mashable](https://mashable.com/). El dataset fue preprocesado por la catedra para agregar el texto de la nota y crear los features `surprise1` y `surprise2` y el target binario `popular` en base al percentil 80% del campo `shares` (`shares` está solo para entender el dataset, logicamente no puede usarse para predecir, pero si para análisis exploratorio). El objetivo del TP es explicar y predecir la variable `popular` que vale True si la noticia es popular y False si no lo es."
+      ],
+      "metadata": {
+        "id": "BwRu_lBgB4rF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Parte I - Análisis Exploratorio"
       ],
       "metadata": {
