--- a/TP3/random_forest.ipynb
+++ b/TP3/random_forest.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "random_forest.ipynb",
+      "name": "RandomForest.ipynb",
       "provenance": [],
       "collapsed_sections": [
         "eu1a3Zco_B8b",
@@ -22,6 +22,15 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El dataset a usar es el extraído de los experimentos realizados en [este paper](https://repositorium.sdum.uminho.pt/bitstream/1822/39169/1/main.pdf) sobre la predicción de popularidad de artículos en el sitio [Mashable](https://mashable.com/). El dataset fue preprocesado por la catedra para agregar el texto de la nota y crear los features `surprise1` y `surprise2` y el target binario `popular` en base al percentil 80% del campo `shares` (`shares` está solo para entender el dataset, logicamente no puede usarse para predecir, pero si para análisis exploratorio). El objetivo del TP es explicar y predecir la variable `popular` que vale True si la noticia es popular y False si no lo es."
+      ],
+      "metadata": {
+        "id": "iB1ABQr2CclE"
+      }
+    },
     {
       "cell_type": "markdown",
       "source": [
